Added Export-Command, For-Command for Lists, Image-Command, MultiCommandHandler, PageStyle-Command, Resource-Implementations, new DataPickers, optional markup XML tags for String replacements Improved Import-Command and internal implementations